--- a/doc/coolFlame.tex
+++ b/doc/coolFlame.tex
@@ -1,49 +1,7 @@
-\RequirePackage[l2tabu,orthodox]{nag} % turn on warnings because of bad style
-\documentclass[a4paper,11pt,bibtotoc]{scrartcl}
+\documentclass[a4paper,11pt,bibtotoc,fleqn]{scrartcl}
+\usepackage{coolFlame}
+\input{coolFlameDefs}
 
-\usepackage[utf8]{inputenc}
-
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
-\usepackage[largesc]{newpxtext}
-\usepackage{newpxmath}
-\usepackage{titling, titlesec}
-\usepackage{slantsc} 
-\usepackage{amsmath}
-\usepackage{hyperref}
-\hypersetup{%
-    %draft, % = no hyperlinking at all (useful in b/w printouts)
-    colorlinks=true, linktocpage=true, pdfstartpage=3, pdfstartview=FitV,%
-    % uncomment the following line if you want to have black links (e.g., for printing)
-    %colorlinks=false, linktocpage=false, pdfstartpage=3, pdfstartview=FitV, pdfborder={0 0 0},%
-    breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,%
-    plainpages=false, bookmarksnumbered=true, bookmarksopen=true, bookmarksopenlevel=0,%
-    hypertexnames=true, pdfhighlight=/O,%nesting=true,%frenchlinks,%
-    urlcolor=webbrown, linkcolor=red, citecolor=webgreen, %pagecolor=RoyalBlue,%
-}   
-
-\usepackage{grffile}            % Allow you to include images (like graphicx). Usage: \includegraphics{path/to/file}
-
-% Allows to set units
-\usepackage[ugly]{units}        % Allows you to type units with correct spacing and font style. Usage: $\unit[100]{m}$ or $\unitfrac[100]{m}{s}$
-
-% Additional packages
-\usepackage{url}                % Lets you typeset urls. Usage: \url{http://...}
-\usepackage{breakurl}           % Enables linebreaks for urls
-\usepackage{xspace}             % Use \xpsace in macros to automatically insert space based on context. Usage: \newcommand{\es}{ESPResSo\xspace}
-\usepackage{xcolor}             % Obviously colors. Usage: \color{red} Red text
-\usepackage{booktabs}           % Nice rules for tables. Usage \begin{tabular}\toprule ... \midrule ... \bottomrule
-
-% Source code listings
-\usepackage{listings}           % Source Code Listings. Usage: \begin{lstlisting}...\end{lstlisting}
-\lstloadlanguages{python}       % Default highlighting set to "python"
-
-\setlength{\droptitle}{-4\baselineskip} % Move the title up
-\pretitle{\begin{center}\Large\scshape\bfseries} % Article title formatting
-\posttitle{\end{center}} % Article title closing formatting
-
-\titleformat{\section}[block]{\large\scshape}{\thesection.}{0.5em}{}
-                                                                 
 \begin{document}
 
 \title{cool flame}
@@ -54,7 +12,18 @@
 \tableofcontents
 
 \section{Optimization problem}
-
-
+Minimize
+\begin{align}
+  \sum_i \txtFood_i.\txtCost \cdot \txtFood_i.\txtAmount
+\end{align}
+Structural constraints
+\begin{align}
+  \forall i: \txtFood_i.\txtMin \le \txtFood_i.\txtAmount \le \txtFood_i.\txtMax
+\end{align}
+Auxiliary constraints
+\begin{align}
+  \forall j: \txtPerson.\txtNutritionminimum_j \le \sum_i
+  \txtFood_i.\txtNutritionvalue_j \cdot \txtFood_i.\txtAmount
+\end{align}
 
 \end{document}
